# claude-code-ochestrator

./: .coveragerc  .gitignore  ANTHROPIC_IMPROVEMENTS_IMPLEMENTED.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SECURITY.md  add_monitoring_tasks.py  anthropic_improvements_status.md  checkpoint_technical_spec.md  dependency_analysis_results.json  example_feature_flags.json  feedback.db  follow_up_task_26.md  follow_up_tasks_task_26.md  orchestrator_config.json  organize_files.py  pyproject.toml  pytest.ini  requirements.txt  task_27_review_summary.md  task_28_monitoring_review.md  task_29_rollback_review.md  task_30_followup_tasks.md
.taskmaster/: task_10.json  task_11.json  task_12.json  task_29.json  task_30.json  task_31.json  task_32.json  task_37.json  task_9.json
claude_orchestrator/: __init__.py  agent_framework.py  agent_router_integration.py  checkpoint_system.py  circuit_breaker.py  claude_direct_api.py  claude_error_handler.py  claude_session_worker.py  cleanup_verification.py  communication_protocol.py  config_manager.py  continuous_test_monitor.py  database_storage.py  dynamic_task_router.py  dynamic_worker_allocation.py  enhanced_inline_executor.py  enhanced_orchestrator.py  enhanced_orchestrator_integration.py  enhanced_progress_display.py  enhanced_prompts.py  enhanced_review_applier.py  enhanced_review_system.py  enhanced_worker_session.py  evaluator_optimizer.py  execution_tracer.py  execution_validator.py  feature_flag_cli.py  feature_flag_integration.py  feature_flags.py  feedback_analysis.py  feedback_analyzer.py  feedback_api.py  feedback_collector.py  feedback_integration.py  feedback_model.py  feedback_models.py  feedback_storage.py  feedback_visualization.py  file_paths.py  inline_executor.py  (+38 more)
designs/: task_042b13f3-00c2-41b5-931d-d8f141552cc7_design.md  task_0648766b-87a7-4aff-8a36-925662156a53_design.md  task_103_design.md  task_105_design.md  task_109_design.md  task_10_design.md  task_13_design.md  task_149_design.md  task_14_design.md  task_17_design.md  task_1_design.md  task_25_design.md  task_4_design.md  (+12 more)
(+163 files in other folders)
