[project]
name = "claude-code-orchestrator"
version = "0.1.0"
description = "Claude Orchestrator - Opus Manager with Sonnet Workers for parallel task processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0.0",
    "PyYAML>=6.0",
    "rich>=10.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
claude-orchestrator = "claude_orchestrator:main"
cco = "claude_orchestrator:main"
co = "claude_orchestrator:main"
